[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]

path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.14"
serde-aux = "4.5.0"
log = "0.4"
unicode-segmentation = "1.12.0"
validator = "0.18.1"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.20.2"
fake = "2.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5.0"
